--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
             - name: Install Playwright
               run: yarn playwright install --with-deps
             - name: Run your tests
-              run: npm test
+              run: yarn test
             - name: Upload test results
               if: always()
               uses: actions/upload-artifact@v2
