--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -2,6 +2,10 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+    types: [opened, ready_for_review, synchronize]
 
 jobs:
   snapshot-update:
@@ -31,5 +35,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'eu-central-1'   # optional: defaults to us-east-1
-          SOURCE_DIR: 'snapshots' # optional: defaults to entire repository
           DEST_DIR: 'playwright-snapshots'
