--- a/.github/workflows/update-snapshot.yml
+++ b/.github/workflows/update-snapshot.yml
@@ -2,10 +2,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-    types: [opened, ready_for_review, synchronize]
 
 jobs:
   snapshot-update:
@@ -29,6 +25,6 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-central-1'   # optional: defaults to us-east-1
-          SOURCE_DIR: 'snapshots' # optional: defaults to entire repository
+          AWS_REGION: 'eu-central-1'
+          SOURCE_DIR: 'snapshots'
           DEST_DIR: 'playwright-snapshots'
