--- a/.github/workflows/update-snapshot.yml
+++ b/.github/workflows/update-snapshot.yml
@@ -18,13 +18,10 @@ jobs:
         run: yarn playwright install --with-deps
       - name: Run your tests
         run: yarn update-snapshots
-      - uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --delete
+      - name: Upload to s3
+        run: |
+          aws s3 sync snapshots/ s3://baseline-snapshots/playwright-snapshots/
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-central-1'
-          SOURCE_DIR: 'snapshots'
-          DEST_DIR: 'playwright-snapshots'
+          AWS_DEFAULT_REGION: 'eu-central-1'
