--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -17,12 +17,12 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Install Playwright
         run: yarn playwright install --with-deps
-      - name: Run your tests
-        run: yarn update-snapshots
       - name: Upload to s3
         run: |
-          aws s3 sync snapshots/ s3://baseline-snapshots/playwright-snapshots/
+            aws s3 sync s3://baseline-snapshots/playwright-snapshots/ snapshots/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'eu-central-1'
+      - name: Run your tests
+        run: yarn update-snapshots
