--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload test report to s3
         if: failure()
         run: |
-            aws s3 sync playwright-report s3://visual-playwright-reports/${GITHUB_REF##*/}
+            aws s3 sync playwright-report s3://visual-playwright-reports/${GITHUB_HEAD_REF}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
