--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -4,6 +4,9 @@ on:
       - main
     types: [ opened, ready_for_review, synchronize ]
 
+env:
+  BRANCH: ${GITHUB_HEAD_REF}
+
 jobs:
   visual-tests:
     name: visual-tests
@@ -29,7 +32,7 @@ jobs:
       - name: Upload test report to s3
         if: failure()
         run: |
-            aws s3 sync playwright-report s3://visual-playwright-reports/${GITHUB_HEAD_REF}
+            aws s3 sync playwright-report s3://visual-playwright-reports/$BRANCH
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -39,5 +42,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-                  Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{GITHUB_HEAD_REF}}/index.html
+                  Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/$BRANCH/index.html
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
