--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -42,5 +42,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-                  Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/$BRANCH/index.html
+                  Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/"${ GITHUB_HEAD_REF }"/index.html
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
