--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   BRANCH: ${GITHUB_HEAD_REF}
+  GITHUB_WORKFLOW_URL: https://github:com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
 
 jobs:
   visual-tests:
@@ -42,5 +43,6 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
+                  $GITHUB_WORKFLOW_URL
                   Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/+${GITHUB_HEAD_REF}+/index.html
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
