--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -40,9 +40,9 @@ jobs:
           AWS_DEFAULT_REGION: 'eu-central-1'
       - name: Link report in comment
         if: failure()
-        uses: thollander/actions-comment-pull-request@v1
+        uses: peter-evans/create-or-update-comment@v2
         with:
-          message: |
+          body: |
+                  ${GITHUB_HEAD_REF}
                   $GITHUB_WORKFLOW_URL
-                  Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/+${GITHUB_HEAD_REF}+/index.html
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${GITHUB_HEAD_REF}/index.html
