--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -42,7 +42,7 @@ jobs:
         if: failure()
         uses: peter-evans/create-or-update-comment@v2
         with:
-          issue: ${{ github.event.number  }}
+          issue-number: ${{ github.event.number  }}
           body: |
                   ${GITHUB_HEAD_REF}
                   $GITHUB_WORKFLOW_URL
