--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -40,10 +40,15 @@ jobs:
           AWS_DEFAULT_REGION: 'eu-central-1'
       - name: Link report in comment
         if: failure()
+      - name: Render template
+        id: template
+        uses: chuhlomin/render-template@v1.4
+        with:
+          template: .github/comment-template.md
+          vars: |
+          pr: ${GITHUB_HEAD_REF}
+      - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
         with:
           issue-number: ${{ github.event.number  }}
-          body: |
-                  ${{GITHUB_HEAD_REF}}
-                  ${{GITHUB_WORKFLOW_URL}}
-                  Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{GITHUB_HEAD_REF}}/index.html
+          body: ${{ steps.template.outputs.result }}
