--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -43,7 +43,7 @@ jobs:
         id: template
         uses: chuhlomin/render-template@v1.4
         with:
-            template: .github/comment-template.md
+            template: comment-template.md
             vars: |
             pr: ${GITHUB_HEAD_REF}
       - name: Link report in comment
