--- a/.github/workflows/update-snapshot.yml
+++ b/.github/workflows/update-snapshot.yml
@@ -12,11 +12,11 @@ jobs:
       - uses: khan/pull-request-comment-trigger@v1.1.0
         id: check
         with:
-          trigger: 'deploy'
+          trigger: '@deploy'
           reaction: rocket
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-      - run: snapshot-update
+      - run: 'echo Found it!'
         if: steps.check.outputs.triggered == 'true'
   snapshot-update:
     name: snapshot-update
