--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -38,11 +38,13 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'eu-central-1'
-      - name: Render template
-        if: failure()
-        uses: NejcZdovc/comment-pr@v1
+      - name: Comment
+      - uses: actions/github-script@v6
         with:
-          file: "comment.md"
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          DATA: test
+          script: |
+              github.rest.issues.createComment({
+                  issue_number: context.issue.number,
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  body: '👋 Thanks for reporting!'
+                })
