--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -48,5 +48,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for reporting! ${{ env.GITHUB_REPOSITORY }}'
+              body: '👋 Thanks for reporting! ${{ env.GITHUB_HEAD_REF }}'
             })
