--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -9,35 +9,35 @@ env:
   GITHUB_WORKFLOW_URL: https://github:com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
 
 jobs:
-  visual-tests:
-    name: visual-tests
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Install Playwright
-        run: yarn playwright install --with-deps
-      - name: Download from s3
-        run: |
-          aws s3 sync s3://baseline-snapshots/playwright-snapshots/ snapshots/
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'eu-central-1'
-      - name: Run your tests
-        run: yarn test
-      - name: Upload test report to s3
-        if: failure()
-        run: |
-          aws s3 sync playwright-report s3://visual-playwright-reports/$BRANCH
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'eu-central-1'
+#  visual-tests:
+#    name: visual-tests
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-node@v2
+#        with:
+#          node-version: '14'
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#      - name: Install Playwright
+#        run: yarn playwright install --with-deps
+#      - name: Download from s3
+#        run: |
+#          aws s3 sync s3://baseline-snapshots/playwright-snapshots/ snapshots/
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          AWS_DEFAULT_REGION: 'eu-central-1'
+#      - name: Run your tests
+#        run: yarn test
+#      - name: Upload test report to s3
+#        if: failure()
+#        run: |
+#          aws s3 sync playwright-report s3://visual-playwright-reports/$BRANCH
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          AWS_DEFAULT_REGION: 'eu-central-1'
   comment:
     runs-on: ubuntu-latest
     steps:
@@ -48,5 +48,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for reporting! {{ github.repository }}'
+              body: '👋 Thanks for reporting! ${{ github.repository }}'
             })
