--- a/.github/workflows/command.yml
+++ b/.github/workflows/command.yml
@@ -1,15 +1,16 @@
 on:
   issue_comment:
-    types: [created]
+    types: [ created ]
 
 jobs:
   pr_commented:
     # This job only runs for pull request comments
-    name: PR comment
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo A comment on PR $NUMBER
+      - name: say hello
+        if: contains(github.event.comment.body, '/support')
+        run: |
+        echo say hello
         env:
           NUMBER: ${{ github.event.issue.number }}
