--- a/.github/workflows/update-snapshot.yml
+++ b/.github/workflows/update-snapshot.yml
@@ -8,23 +8,24 @@ jobs:
     runs-on: ubuntu-20.04
     if: ${{ github.event.issue.pull_request && github.event.comment.body == '/baseline'}}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Install Playwright
-        run: yarn playwright install --with-deps
-      - name: Run your tests
-        run: yarn update-snapshots
-      - name: Upload to s3
-        run: |
-          aws s3 sync snapshots/ s3://baseline-snapshots/playwright-snapshots/
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'eu-central-1'
+      - run: echo "Updating baseline snapshot"
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-node@v2
+#        with:
+#          node-version: '14'
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#      - name: Install Playwright
+#        run: yarn playwright install --with-deps
+#      - name: Run your tests
+#        run: yarn update-snapshots
+#      - name: Upload to s3
+#        run: |
+#          aws s3 sync snapshots/ s3://baseline-snapshots/playwright-snapshots/
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          AWS_DEFAULT_REGION: 'eu-central-1'
   setup:
     name: Get check run ids from action run id
     runs-on: ubuntu-latest
