--- a/.github/workflows/update-snapshot.yml
+++ b/.github/workflows/update-snapshot.yml
@@ -1,6 +1,8 @@
 on:
-  issue_comment:
-    types: [ created ]
+  pull_request:
+    branches:
+      - main
+    types: [ opened, ready_for_review, synchronize ]
 
 jobs:
   snapshot-update:
