--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -34,13 +34,12 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'eu-central-1'
-  comment:
-    runs-on: ubuntu-latest
-    needs: visual-tests
-    if: always() && needs.visual-tests.result == 'failure'
-    steps:
-    - uses: peter-evans/create-or-update-comment@v2
-      with:
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          This PR introduces visual changes, please check them out here! [Visual tests report](https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{ github.head_ref }}/index.html)
+      - name: Link report in comment
+        if: failure()
+        uses: peter-evans/create-or-update-comment@v2
+        with:
+            issue: ${{ github.event.number  }}
+            body: |
+              ${GITHUB_HEAD_REF}
+              $GITHUB_WORKFLOW_URL
+              Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{ github.head_ref }}/index.html
