--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -40,6 +40,4 @@ jobs:
         with:
             issue-number: ${{ github.event.number  }}
             body: |
-              ${GITHUB_HEAD_REF}
-              $GITHUB_WORKFLOW_URL
-              Looks like you've introduced visual changes, please review the report: https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{ github.head_ref }}/index.html
+              Looks like you've introduced visual changes, please review the report here: [Visual report] (https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{ github.head_ref }}/index.html)
