--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -9,6 +9,14 @@ jobs:
     name: visual-tests
     runs-on: ubuntu-20.04
     steps:
+      - uses: LouisBrunner/checks-action@v1.1.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: visual-tests
+          status: in_progress
+          details_url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          output: |
+            {"summary":"Test In Progress","text_description":"See job details here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"}
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
@@ -34,10 +42,19 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'eu-central-1'
+      - uses: LouisBrunner/checks-action@v1.1.1
+        with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+            name: visual-tests
+            conclusion: neutral
+            status: completed
+            details_url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            output: |
+              {"summary":"Test In Progress","text_description":"See job details here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"}
       - name: Link report in comment
         if: failure()
         uses: peter-evans/create-or-update-comment@v2
         with:
-            issue-number: ${{ github.event.number  }}
-            body: |
-                This PR introduces visual changes, please check them out here! [Visual tests report](https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{ github.head_ref }}/index.html)
+          issue-number: ${{ github.event.number  }}
+          body: |
+            This PR introduces visual changes, please check them out here! [Visual tests report](https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{ github.head_ref }}/index.html)
