--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -21,27 +21,27 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Install Playwright
-        run: yarn playwright install --with-deps
-      - name: Download from s3
-        run: |
-          aws s3 sync s3://baseline-snapshots/playwright-snapshots/ snapshots/
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'eu-central-1'
-      - name: Run your tests
-        run: yarn test
-      - name: Upload test report to s3
-        if: failure()
-        run: |
-          aws s3 sync playwright-report s3://visual-playwright-reports/${{ github.head_ref }}
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'eu-central-1'
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#      - name: Install Playwright
+#        run: yarn playwright install --with-deps
+#      - name: Download from s3
+#        run: |
+#          aws s3 sync s3://baseline-snapshots/playwright-snapshots/ snapshots/
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          AWS_DEFAULT_REGION: 'eu-central-1'
+#      - name: Run your tests
+#        run: yarn test
+#      - name: Upload test report to s3
+#        if: failure()
+#        run: |
+#          aws s3 sync playwright-report s3://visual-playwright-reports/${{ github.head_ref }}
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          AWS_DEFAULT_REGION: 'eu-central-1'
       - name: update status
         uses: LouisBrunner/checks-action@v1.1.1
         with:
