--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -5,6 +5,20 @@ on:
     types: [ opened, ready_for_review, synchronize ]
 
 jobs:
+  test_something:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/create-outputs@v0.0.0-fake
+        id: test
+      - uses: LouisBrunner/checks-action@v1.1.1
+        if: always()
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: Test XYZ
+          conclusion: ${{ job.status }}
+          output: |
+            {"summary":${{ steps.test.outputs.summary }}}
   visual-testing:
     runs-on: ubuntu-20.04
     steps:
