--- a/.github/visual-testing.yml
+++ b/.github/visual-testing.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - name: Install dependencies
+      - name: Install dependenciesd
         run: yarn install --frozen-lockfile
       - name: Install Playwright
         run: yarn playwright install --with-deps
