--- a/.github/workflows/sync-test-scenarios.yml
+++ b/.github/workflows/sync-test-scenarios.yml
@@ -29,5 +29,5 @@ jobs:
           
           API_URL="https://api.github.com/repos/${{ github.repository }}/pulls/${PR_NUMBER}"
           
-          echo "Updating PR description..."
+          echo "Updating PR description...."
           curl -X PATCH -H "Authorization: token $ACCESS_TOKEN" -H "Accept: application/vnd.github.v3+json" $API_URL -d "{\"body\":\"JIRA Ticket: $JIRA_TICKET\"}"
